PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.3.0 Alpha 4
- Upgraded bundled sqlite to version 3.6.7. (Scott)

- Deprecated session_register(), session_unregister() and
  session_is_registered(). (Hannes)

- Changed opendir(), dir() and scandir() to use default context when no context
  argument is passed. (Sara)
- Changed open_basedir to allow tightening in runtime contexts. (Sara)

- Added json_last_error() to return any error information from json_decode().
  (Scott)
- Added shm_has_var() function. (Mike)
- Added depth parameter to json_decode() to lower the nesting depth from the
  maximum if required. (Scott)
- Added ICU support to SQLite3 when using the bundled version. (Scott)

- Fixed bug #46957 (The tokenizer returns deprecated values). (Felipe)
- Fixed bug #46849 (Cloning DOMDocument doesn't clone the properties). (Rob)
- Fixed bug #46847 (phpinfo() is missing some settings). (Hannes)
- Fixed bug #46811 (ini_set() doesn't return false on failure). (Hannes)
- Fixed bug #46746 (xmlrpc_decode_request outputs non-suppressable error when
  given bad data). (Ilia)
- Fixed bug #46738 (Segfault when mb_detect_encoding() fails). (Scott)
- Fixed bug #46681 (mkdir() fails silently on PHP 5.3). (Hannes)
- Fixed bug #46646 (Restrict serialization on some internal classes like
  Closure and SplFileInfo using exceptions). (Etienne)
- Fixed bug #46268 (DateTime::modify() does not reset relative time values).
  (Derick)
- Fixed bug #45991 (Ini files with the UTF-8 BOM are treated as invalid).
  (Scott)
- Fixed bug #45989 (json_decode() doesn't return NULL on certain invalid
  strings). (magicaltux, Scott)
- Fixed bug #45820 (Allow empty keys in ArrayObject). (Etienne)
- Fixed bug #45791 (json_decode() doesn't convert 0e0 to a double). (Scott)

04 Dec 2008, PHP 5.3.0 Alpha 3
- Upgraded bundled PCRE to version 7.8. (Nuno)