@@ -426,6 +426,17 @@ static sapi_module_struct cli_sapi_module = {
 };
 /* }}} */
 
+/* {{{ arginfo ext/standard/dl.c */
+ZEND_BEGIN_ARG_INFO(arginfo_dl, 0)
+	ZEND_ARG_INFO(0, extension_filename)
+ZEND_END_ARG_INFO()
+/* }}} */
+
+static const zend_function_entry additional_functions[] = {
+	ZEND_FE(dl, arginfo_dl)
+	{NULL, NULL, NULL}
+};
+
 /* {{{ php_cli_usage
  */
 static void php_cli_usage(char *argv0)
@@ -704,6 +715,7 @@ int main(int argc, char *argv[])
 	php_optarg = orig_optarg;
 
 	cli_sapi_module.executable_location = argv[0];
+	cli_sapi_module.additional_functions = additional_functions;
 
 	/* startup after we get the above ini override se we get things right */
 	if (cli_sapi_module.startup(&cli_sapi_module)==FAILURE) {
