@@ -6,6 +6,8 @@ PHP                                                                        NEWS
 - Deprecated session_register(), session_unregister() and
   session_is_registered(). (Hannes)
 
+- Changed dl() to be disabled by default. Enabled only when explicitly
+  registered by the SAPI layer. Enabled only with CLI, CGI and EMBED. (Dmitry)
 - Changed opendir(), dir() and scandir() to use default context when no context
   argument is passed. (Sara)
 - Changed open_basedir to allow tightening in runtime contexts. (Sara)
